--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="tel:206-855-3110">(206) 855-3110</a>
+                <a class="navbar-brand page-scroll" href="tel:xxx-xxx-xxxx">(xxx) xxx-xxxx</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
